--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=vinhdubai10_TestLast
-sonar.organization=vinhdubai10-1
+sonar.projectKey=testlast_test
+sonar.organization=testlast
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=TestLast
+#sonar.projectName=test
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
