--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=vinhdubai10_TestLast
 sonar.organization=vinhdubai10-1
-sonar.java.binaries=F:\TestLast\Project_PRJ-master\Project_PRJ\src\java\Context
+sonar.java.binaries=Project_PRJ-master/Project_PRJ/src/java/controller/DeleteControl.java
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=TestLast
 #sonar.projectVersion=1.0
